--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>carpediem23 Web Think</title><link rel="stylesheet" href="/index.12f43a85.css"><script src="/index.9df4367c.js"></script></head><body> <p>test</p> </body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>carpediem23 Web Think</title>
+    <link rel="icon" href="./assets/images/profile_transparent.png" type="image/x-icon" />
+    <meta property="og:title" content="carpediem23 Web Think" />
+    <meta property="og:description" content="Welcome to carpediem23's personal website." />
+    <meta property="og:image" content="./assets/images/profile_transparent.png" />
+    <meta property="og:url" content="https://carpediem23.github.io" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="carpediem23 Web Think" />
+    <meta name="twitter:description" content="Welcome to carpediem23 web think." />
+    <meta name="twitter:image" content="./assets/images/profile_transparent.png" />
+    <link rel="stylesheet" href="./assets/styles/global.css" />
+    <script src="./assets/scripts/index.js"></script>
+  </head>
+  <body>
+    <main>
+      <img src="./assets/images/profile_transparent.png" alt="Web Developer" />
+      <h2>carpediem23</h2>
+    </main>
+  </body>
+</html>
