Add canvas element and implement basic drawing functionality

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <main>
       <img src="./assets/images/profile_transparent.png" alt="Web Developer" />
       <h2>carpediem23</h2>
+      <canvas id="canvas"></canvas>
     </main>
   </body>
 </html>
