Implement raindrop animation and enhance HTML structure with social links

--- a/index.html
+++ b/index.html
@@ -4,23 +4,60 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>carpediem23 Web Think</title>
-    <link rel="icon" href="./assets/images/profile_transparent.png" type="image/x-icon" />
+    <link
+      rel="icon"
+      href="./assets/images/profile_transparent.png"
+      type="image/x-icon"
+    />
     <meta property="og:title" content="carpediem23 Web Think" />
-    <meta property="og:description" content="Welcome to carpediem23's personal website." />
-    <meta property="og:image" content="./assets/images/profile_transparent.png" />
+    <meta
+      property="og:description"
+      content="Welcome to carpediem23's personal website."
+    />
+    <meta
+      property="og:image"
+      content="./assets/images/profile_transparent.png"
+    />
     <meta property="og:url" content="https://carpediem23.github.io" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="carpediem23 Web Think" />
-    <meta name="twitter:description" content="Welcome to carpediem23 web think." />
-    <meta name="twitter:image" content="./assets/images/profile_transparent.png" />
+    <meta
+      name="twitter:description"
+      content="Welcome to carpediem23 web think."
+    />
+    <meta
+      name="twitter:image"
+      content="./assets/images/profile_transparent.png"
+    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/iconoir-icons/iconoir@main/css/iconoir.css" />
     <link rel="stylesheet" href="./assets/styles/global.css" />
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <script src="./assets/scripts/index.js"></script>
   </head>
   <body>
     <main>
       <img src="./assets/images/profile_transparent.png" alt="Web Developer" />
       <h2>carpediem23</h2>
+      <h5>My story is coming</h5>
+      <ul>
+        <li>
+          <a class="social-link" href="#"
+            ><i class="iconoir-github"></i>
+          </box-icon>
+            <p>My Github Profile</p></a
+          >
+        </li>
+        <li>
+          <a class="social-link" href="#"
+            ><i class="iconoir-linkedin"></i></box-icon>
+            <p>My Linkdin Profile</p></a
+          >
+        </li>
+      </ul>
       <canvas id="canvas"></canvas>
     </main>
+    <audio autoplay loop>
+      <source src="./assets/audios/ambient.mp3" type="audio/mpeg" />
+    </audio>
   </body>
 </html>
