--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
       <h5>My story is coming</h5>
       <ul>
         <li>
-          <a class="social-link" href="#"
+          <a class="social-link" href="https://github.com/carpediem23" target="_self"
             ><i class="iconoir-github"></i>
           </box-icon>
             <p>My Github Profile</p></a
           >
         </li>
         <li>
-          <a class="social-link" href="#"
+          <a class="social-link" href="https://www.linkedin.com/in/alptugturkis" target="_self"
             ><i class="iconoir-linkedin"></i></box-icon>
             <p>My Linkdin Profile</p></a
           >
