Fix typos in HTML meta tags for consistency and clarity

--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>carpediem23 Web Think</title>
+    <title>carpediem23 Web Thing</title>
     <link
       rel="icon"
       href="./assets/images/profile_transparent.png"
       type="image/x-icon"
     />
-    <meta property="og:title" content="carpediem23 Web Think" />
+    <meta property="og:title" content="carpediem23 Web Thing" />
     <meta
       property="og:description"
-      content="Welcome to carpediem23's personal website."
+      content="Welcome to carpediem23's personal web thing."
     />
     <meta
       property="og:image"
@@ -20,10 +20,10 @@
     />
     <meta property="og:url" content="https://carpediem23.github.io" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="carpediem23 Web Think" />
+    <meta name="twitter:title" content="carpediem23 Web Thing" />
     <meta
       name="twitter:description"
-      content="Welcome to carpediem23 web think."
+      content="Welcome to carpediem23 web thing."
     />
     <meta
       name="twitter:image"
