Add Google Analytics tracking and update social links to open in new tabs

--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-32RRC75QRE"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-32RRC75QRE');
+    </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>carpediem23 Web Thing</title>
@@ -74,7 +83,7 @@
           <a
             class="social-link"
             href="https://github.com/carpediem23"
-            target="_self"
+            target="_blank"
             aria-label="Visit my Github profile"
             ><i class="iconoir-github"></i> My Github Profile</a
           >
@@ -83,7 +92,7 @@
           <a
             class="social-link"
             href="https://www.linkedin.com/in/alptugturkis"
-            target="_self"
+            target="_blank"
             aria-label="Visit my LinkedIn profile"
             ><i class="iconoir-linkedin"></i> My LinkedIn Profile</a
           >
