Initialize project with package.json and .gitignore; update image format in meta tags

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     />
     <meta
       property="og:image"
-      content="./assets/images/profile_transparent.png"
+      content="./assets/images/profile_transparent.webp"
     />
     <meta property="og:url" content="https://carpediem23.github.io" />
     <meta name="twitter:card" content="summary_large_image" />
@@ -45,7 +45,7 @@
     />
     <meta
       name="twitter:image"
-      content="./assets/images/profile_transparent.png"
+      content="./assets/images/profile_transparent.webp"
     />
     <link
       rel="stylesheet"
