Improve accessibility by adding skip link, enhancing ARIA attributes, and updating social media navigation

--- a/index.html
+++ b/index.html
@@ -60,19 +60,25 @@
     <script defer src="./scripts/index.js"></script>
   </head>
   <body>
-    <header>
-      <button id="audio-switch" data-can-play="false" aria-label="Mute sound">
-        <i class="iconoir-sound-off"></i>
+    <a href="#main-content" class="skip-link">Skip to main content</a>
+    <header role="banner">
+      <button
+        id="audio-switch"
+        data-can-play="false"
+        aria-label="Toggle sound"
+        aria-pressed="false"
+      >
+        <i class="iconoir-sound-off" aria-hidden="true"></i>
       </button>
     </header>
-    <main>
+    <main id="main-content" role="main">
       <img
         id="profile-image"
         src="./assets/images/profile_transparent.webp"
-        alt="Web Developer"
+        alt="Profile picture of carpediem23"
       />
-      <h1>carpediem23</h1>
-      <h2 id="typewriter">
+      <h1 tabindex="-1">carpediem23</h1>
+      <h2 id="typewriter" aria-live="polite">
         Hello, I am a fullstack developer who loves music and gaming. I am
         writing a short introduction about myself to be included in my Github
         profile. I love using technologies such as Javascript, Typescript, Node
@@ -82,27 +88,34 @@
         enterprise software development training and mentoring to information
         technology employees for about 2 years.
       </h2>
-      <ul id="social-links">
-        <li>
-          <a
-            class="social-link"
-            href="https://github.com/carpediem23"
-            target="_blank"
-            aria-label="Visit my Github profile"
-            ><i class="iconoir-github"></i> Github Profile</a
-          >
-        </li>
-        <li>
-          <a
-            class="social-link"
-            href="https://www.linkedin.com/in/alptugturkis"
-            target="_blank"
-            aria-label="Visit my LinkedIn profile"
-            ><i class="iconoir-linkedin"></i> LinkedIn Profile</a
-          >
-        </li>
-      </ul>
-      <canvas id="canvas"></canvas>
+      <nav aria-label="Social media links">
+        <ul id="social-links">
+          <li>
+            <a
+              class="social-link"
+              href="https://github.com/carpediem23"
+              target="_blank"
+              aria-label="Visit my Github profile (opens in new tab)"
+              rel="noopener noreferrer"
+            >
+              <i class="iconoir-github" aria-hidden="true"></i> Github Profile
+            </a>
+          </li>
+          <li>
+            <a
+              class="social-link"
+              href="https://www.linkedin.com/in/alptugturkis"
+              target="_blank"
+              aria-label="Visit my LinkedIn profile (opens in new tab)"
+              rel="noopener noreferrer"
+            >
+              <i class="iconoir-linkedin" aria-hidden="true"></i> LinkedIn
+              Profile
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <canvas id="canvas" aria-hidden="true" role="presentation"></canvas>
       <audio id="ambience" autoplay muted loop volume="0.1">
         <source src="./assets/audios/ambience.mp3" type="audio/mpeg" />
       </audio>
