--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
       name="keywords"
       content="carpediem23, web developer, fullstack developer, javascript, typescript, node js, react js, react native, next js, tailwind, html, css, express js, asp.net, web application, mobile application, software development, training, mentoring"
     />
+    <meta name="theme-color" content="#00ff18" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta property="og:title" content="carpediem23 Web Thing" />
     <meta
       property="og:description"
@@ -52,13 +55,15 @@
       name="twitter:image"
       content="./assets/images/profile_transparent.webp"
     />
+    <link rel="manifest" href="manifest.json" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/iconoir-icons/iconoir@main/css/iconoir.css"
     />
     <link rel="stylesheet" href="./styles/global.css" />
-    <script defer src="./scripts/index.js"></script>
+    <script defer src="./scripts/index.js" type="module"></script>
   </head>
+
   <body>
     <a href="#main-content" class="skip-link">Skip to main content</a>
     <header role="banner">
