Update application metadata and descriptions for clarity and consistency

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>carpediem23 Web Thing</title>
+    <title>carpediem23's Virtual Card Application</title>
     <link
       rel="icon"
       href="./assets/images/profile_transparent.webp"
@@ -25,7 +25,7 @@
     />
     <meta
       name="description"
-      content="Welcome to carpediem23's personal web thing."
+      content="carpediem23's Virtual Card Application"
     />
     <meta name="author" content="carpediem23" />
     <meta
@@ -35,10 +35,10 @@
     <meta name="theme-color" content="#00ff18" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta property="og:title" content="carpediem23 Web Thing" />
+    <meta property="og:title" content="carpediem23's Virtual Card" />
     <meta
       property="og:description"
-      content="Welcome to carpediem23's personal web thing."
+      content="carpediem23's Virtual Card Application"
     />
     <meta
       property="og:image"
@@ -46,10 +46,10 @@
     />
     <meta property="og:url" content="https://carpediem23.github.io" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="carpediem23 Web Thing" />
+    <meta name="twitter:title" content="carpediem23's Virtual Card" />
     <meta
       name="twitter:description"
-      content="Welcome to carpediem23 web thing."
+      content="carpediem23's Virtual Card Application"
     />
     <meta
       name="twitter:image"
