Update image format in manifest and correct meta tag in index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       content="carpediem23, web developer, fullstack developer, javascript, typescript, node js, react js, react native, next js, tailwind, html, css, express js, asp.net, web application, mobile application, software development, training, mentoring"
     />
     <meta name="theme-color" content="#00ff18" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta property="og:title" content="carpediem23's Virtual Card" />
     <meta
