--- a/index.html
+++ b/index.html
@@ -22,20 +22,25 @@
   <meta name="keywords"
     content="carpediem23, web developer, fullstack developer, javascript, typescript, node js, react js, react native, next js, tailwind, html, css, express js, asp.net, web application, mobile application, software development, training, mentoring" />
   <meta name="theme-color" content="#00ff18" />
-  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <meta property="og:type" content="website" />
   <meta property="og:title" content="carpediem23's Virtual Card" />
   <meta property="og:description" content="carpediem23's Virtual Card Application" />
-  <meta property="og:image" content="./assets/images/profile_transparent.webp" />
+  <meta property="og:image" content="./assets/images/profile_transparent.png" />
+  <meta property="og:image:alt" content="carpediem23's Profile Picture" />
   <meta property="og:url" content="https://carpediem23.github.io" />
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:site_name" content="carpediem23's vCard" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="carpediem23's Virtual Card" />
   <meta name="twitter:description" content="carpediem23's Virtual Card Application" />
   <meta name="twitter:image" content="./assets/images/profile_transparent.webp" />
   <link rel="manifest" href="manifest.json" />
-  <link rel="stylesheet" href="./styles/global.css">
+  <link rel="stylesheet" href="./styles/global.css" />
   <script defer src="./scripts/index.js" type="module"></script>
 </head>
+
 <body>
   <main>
     <section id="terminal-container">
@@ -46,7 +51,7 @@
             <div class="terminal-button minimize"></div>
             <div class="terminal-button maximize"></div>
           </section>
-          <h1 class="terminal-title">carpediem23@portfolio ~ </h1>
+          <h1 class="terminal-title">carpediem23@portfolio ~</h1>
         </header>
         <section class="terminal-content"></section>
       </div>
@@ -61,7 +66,7 @@
   </template>
   <template id="help-template">
     <div class="terminal-output">
-      <strong>Available Commands:</strong>
+      <h4><strong>Available Commands:</strong></h4>
       <p>- <strong>help:</strong> Show this help message</p>
       <p>- <strong>about:</strong> Learn about me</p>
       <p>- <strong>skills:</strong> View my technical skills</p>
@@ -72,9 +77,46 @@
   </template>
   <template id="welcome-template">
     <div class="terminal-output">
-      <p>Welcome to my terminal vCard!</p>
+      <h4>Welcome to my terminal vCard!</h4>
       <p>Type '<strong>help</strong>' to see available commands.</p>
       <p>--------------------------------</p>
+    </div>
+  </template>
+  <template id="about-template">
+    <div class="terminal-output">
+      <p>Hi, I'm carpediem23! 👋</p>
+      <p>
+        I'm a Fullstack Developer passionate about creating web and mobile
+        applications using modern technologies.
+      </p>
+      <p>I love music 🎵 and gaming 🎮 in my free time.</p>
+    </div>
+  </template>
+  <template id="skills-template">
+    <div class="terminal-output">
+      <h4><strong>Technical Skills:</strong></h4>
+      <p>
+        - <strong>Frontend:</strong> React.js, React Native, Next.js,
+        JavaScript, TypeScript
+      </p>
+      <p>- <strong>Backend:</strong> Node.js, Express.js, ASP.NET</p>
+      <p>- <strong>Database:</strong> MongoDB, PostgreSQL, MySQL</p>
+      <p>- <strong>Other:</strong> Git, Docker, Google Cloud, Azure</p>
+    </div>
+  </template>
+  <template id="projects-template">
+    <div class="terminal-output">
+      <h4><strong>Notable Projects:</strong></h4>
+      <p>1. Virtual Card Terminal (This website!)</p>
+      <p>2. Various Web, Game and Mobile Applications</p>
+      <p>For more details, visit: https://github.com/carpediem23</p>
+    </div>
+  </template>
+  <template id="contact-template">
+    <div class="terminal-output">
+      <h4><strong>Get in touch (Please click):</strong></h4>
+      <a href="https://github.com/carpediem23" target="_blank">- GitHub</a>
+      <a href="https://www.linkedin.com/in/alptugturkis" target="_blank">- LinkedIn</a>
     </div>
   </template>
   <noscript>
@@ -83,8 +125,8 @@
         height="150" />
       <h1>carpediem23</h1>
       <p>
-        Hello, I am a fullstack developer who loves music and gaming. I develop web and mobile applications using modern
-        technologies.
+        Hello, I am a fullstack developer who loves music and gaming. I
+        develop web and mobile applications using modern technologies.
       </p>
       <div class="social-links-basic">
         <a href="https://github.com/carpediem23" target="_blank" rel="noopener noreferrer">Github Profile</a>
@@ -94,4 +136,5 @@
     </div>
   </noscript>
 </body>
+
 </html>
