Refactor terminal output IDs in index.html for consistency and clarity

--- a/index.html
+++ b/index.html
@@ -86,14 +86,14 @@
     </div>
   </template>
   <template id="welcome-template">
-    <div id="termial-output-welcome" class="terminal-output">
+    <div class="terminal-output">
       <h4>Welcome to my terminal vCard!</h4>
       <p>Type '<strong>help</strong>' to see available commands.</p>
       <p>--------------------------------</p>
     </div>
   </template>
   <template id="about-template">
-    <div id="termial-output-about" class="terminal-output">
+    <div class="terminal-output">
       <p>Hi, I'm carpediem23! 👋</p>
       <p>
         I'm a Fullstack Developer passionate about creating web and mobile
@@ -103,7 +103,7 @@
     </div>
   </template>
   <template id="skills-template">
-    <div id="termial-output-skills" class="terminal-output">
+    <div class="terminal-output">
       <h4><strong>Technical Skills:</strong></h4>
       <p>
         - <strong>Frontend:</strong> React.js, React Native, Next.js,
@@ -115,7 +115,7 @@
     </div>
   </template>
   <template id="projects-template">
-    <div id="termial-output-projects" class="terminal-output">
+    <div class="terminal-output">
       <h4><strong>Notable Projects:</strong></h4>
       <p>1. Virtual Card Terminal (This website!)</p>
       <p>2. Various Web, Game and Mobile Applications</p>
@@ -123,7 +123,7 @@
     </div>
   </template>
   <template id="contact-template">
-    <div id="termial-output-contact" class="terminal-output">
+    <div class="terminal-output">
       <h4><strong>Get in touch (Please click):</strong></h4>
       <a href="https://github.com/carpediem23" target="_blank">- GitHub</a>
       <a href="https://www.linkedin.com/in/alptugturkis" target="_blank">- LinkedIn</a>
